force-app/main/default/objects/BudgetRequest__c/BudgetRequest__c.object-meta.xml
<CustomObject>
    <label>Budget Request</label>
    <nameField>
        <displayFormat>RQ{000000}</displayFormat>
        <label>BudgetRequest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>