force-app/main/default/objects/BudgetRequest__c/fields/InactDate__c.field-meta.xml
<CustomField>
    <fullName>InactDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Inact Date</label>
    <type>Date</type>
</CustomField>